update status report
